@startuml
hide empty description

state Aus
state Pause

[*] --> Aus

Aus: Exit: piepen

Aus --> An : anschalten

state An {
  An: Entry: wasserReinigen

  [*] --> Leerlauf
  Leerlauf --> Leerlauf : wasserAuffüllen

  Leerlauf --> Zubereitung : kaffeeMachen [wasser > 20]

  Zubereitung --> Ausgabe

  Ausgabe --> Leerlauf : kaffeeEntnehmen
}

An --> Pause : stop
Pause --> An[H] : fortfahren
@enduml